2013-09-29  Brian Tiffin & Simon  Sobisch

	* Change package name, and project to GNU Cobol
    * GNU-ification of source code commencing

2010-06-28  Roger While <simrw@sim-basis.de>

	* MARK - Version 2.0
	* Move to GPL/LGPL 3

2009-04-11  Roger While <simrw@sim-basis.de>

	* configure.ac : Changes for BDB support, support icc
	* General : Affects all directories - Rebase to latest stable
		    autoxxxx tools

2009-03-12  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix for newest development tools

2009-03-09  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix up m4 quoting

2009-03-02  Roger While <simrw@sim-basis.de>

	* configure.ac : Correctly test for gcc and icc
	* cpucheck.c : Remove

2008-11-17  Roger While <simrw@sim-basis.de>

	* configure.ac : Correct sed usage

2008-11-15  Roger While <simrw@sim-basis.de>

	* configure.ac : Remove lfs64 option, reinstate --enable-debug

2008-11-01  Roger While <simrw@sim-basis.de>

	* configure.ac : nanosleep on Solaris needs extra libs

2008-09-29  Roger While <simrw@sim-basis.de>

	* Makefile.am : Revise format of tarstamp.h

2008-08-20  Roger While <simrw@sim-basis.de>

	* configure.ac : Option changes for AIX

2008-08-16  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix AIX xlc

2008-08-08  Roger While <simrw@sim-basis.de>

	* configure.ac : Take out --enable-debug
	* Makefile.am : Force permissions when making dist

2008-07-05  Roger While <simrw@sim-basis.de>

	* configure.ac : No need to check for regex or mvgetnstr

2008-04-16  Roger While <simrw@sim-basis.de>

	* configure.ac : Add in "copy" directory for OC supplied COPY elements

2008-01-03  Roger While <simrw@sim-basis.de>

	* configure.ac : Fix invalid usage of square brackets

2007-12-29  Roger While <simrw@sim-basis.de>

	* Bump version to 1.1

2007-12-27  Roger While <simrw@sim-basis.de>

	* Release 1.0

2007-12-21  Roger While <simrw@sim-basis.de>

	* configure.ac : Change order of checking various things
